--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
             </ul>
             <button class="btn menu-btn">subscribe<i class="fa-solid fa-arrow-right-long"></i></button>
-            <button class="hamburger-menu"> <img src="./assets/hamburger-menu.png" alt=""></button> 
+            <button class="hamburger-menu"> <img src="./assets/hamburger-menu.png" alt=""></button>
         </nav>
         <section class="hero">
             <div class="hero1">
@@ -58,33 +58,34 @@
         <section class="about">
             <div class="about-us">
                 <div class="about-txt">
-            <h2>About the Podcast</h2>
-            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
-                We break down complex topics into digestible insights, explore productivity strategies that actually
-                work,<br>
-                and share stories of personal growth from industry leaders.
-                <br><br><br>
-                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
-            </p>
-            </div>
-            <div class="cards">
-                <div class="card">
-                    <h2>150K+</h2>
-                    <p>Monthly Listeners</p>
+                    <h2>About the Podcast</h2>
+                    <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                        We break down complex topics into digestible insights, explore productivity strategies that
+                        actually
+                        work,<br>
+                        and share stories of personal growth from industry leaders.
+                        <br><br><br>
+                        Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                    </p>
                 </div>
-                <div class="card">
-                    <h2>200+</h2>
-                    <p>Episodes Published</p>
+                <div class="cards">
+                    <div class="card">
+                        <h2>150K+</h2>
+                        <p>Monthly Listeners</p>
+                    </div>
+                    <div class="card">
+                        <h2>200+</h2>
+                        <p>Episodes Published</p>
+                    </div>
+                    <div class="card">
+                        <h2>4.9<span class="fa fa-star checked"></span></h2>
+                        <p>Average Rating</p>
+                    </div>
+                    <div class="card">
+                        <h2>50+</h2>
+                        <p>Industry Experts</p>
+                    </div>
                 </div>
-                <div class="card">
-                    <h2>4.9<span class="fa fa-star checked"></span></h2>
-                    <p>Average Rating</p>
-                </div>
-                <div class="card">
-                    <h2>50+</h2>
-                    <p>Industry Experts</p>
-                </div>
-            </div>
             </div>
         </section>
 
@@ -115,7 +116,9 @@
                     <div class="choose-card four">
                         <img src="./assets/interview.png" alt="">
                         <h3>Exclusive Interviews</h3>
-                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                            secures exclusive conversations you won't find anywhere else, diving deep into their
+                            journeys, failures, and success strategies.
                         </p>
                     </div>
                     <div class="choose-card five">
@@ -135,64 +138,56 @@
                     <div class="episodes-card">
 
                         <div class="epi-card">
-                            <iframe 
-                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                            <iframe src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <div class="crd-txt">
-                            <h3>The Future of AI in Everyday Life</h3>
-                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
-                                expect
-                                in
-                                the next decade.</p>
+                            <div class="crd-txt">
+                                <h3>The Future of Artificial Intelligence</h3>
+                                <p>Artificial Intelligence has the potential to revolutionize virtually every aspect of
+                                    modern life in a way that makes everything from healthcare to agriculture more
+                                    convenient, effective, and affordable. .</p>
 
-                            <div class="time">
-                                <img src="./assets/clock.png" alt="">
-                                <p>42 min</p>
-                            </div>
+                                <div class="time">
+                                    <img src="./assets/clock.png" alt="">
+                                    <p>03 min</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="epi-card">
-                            <iframe 
-                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                            <iframe src="https://www.youtube.com/embed/s4r5gXdSVPM?si=j8Pwqvor3yGHNI8q&amp;controls=0"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <div class="crd-txt">
-                            <h3>The Future of AI in Everyday Life</h3>
-                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
-                                expect
-                                in
-                                the next decade.</p>
+                            <div class="crd-txt">
+                                <h3>The Rise of Generative AI for Business</h3>
+                                <p> Artificial Intelligence (AI) is not magic. It’s math and science, and it's going to
+                                    touch every aspect of our lives. Let's examine the history of AI, and explore what
+                                    the future holds for enterprises considering AI adoption.</p>
 
-                            <div class="time">
-                                <img src="./assets/clock.png" alt="">
-                                <p>42 min</p>
-                            </div>
+                                <div class="time">
+                                    <img src="./assets/clock.png" alt="">
+                                    <p>15 min</p>
+                                </div>
                             </div>
                         </div>
+
                         <div class="epi-card">
-                            <iframe 
-                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                <div class="crd-txt">
-                            <h3>The Future of AI in Everyday Life</h3>
-                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
-                                expect
-                                in
-                                the next decade.</p>
+                            <iframe src="https://www.youtube.com/embed/ZHCB09O6zUk?si=26ftX14VbxDAk8Xz&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="crd-txt">
+                                <h3>A Brief History of AI: From Gen AI to Agentic AI
+                                </h3>
+                                <p>AI didn’t happen overnight 🤖 — it’s been 70 years in the making. Jeff Crume traces the evolution of artificial intelligence from early programming to machine learning, generative AI, and agentic AI. Discover how decades of innovation shaped today’s intelligent systems.
+</p>
 
-                            <div class="time">
-                                <img src="./assets/clock.png" alt="">
-                                <p>42 min</p>
-                            </div>
+                                <div class="time">
+                                    <img src="./assets/clock.png" alt="">
+                                    <p>13 min</p>
+                                </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
 
@@ -200,7 +195,8 @@
                     <h2>Meet the Host</h2>
                     <div class="host-details">
                         <div class="alex-img">
-                        <img src="./assets/host.png" alt=""></div>
+                            <img src="./assets/host.png" alt="">
+                        </div>
                         <div class="alex">
                             <h3>Alex Kumar</h3>
                             <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
@@ -243,7 +239,8 @@
                 </div>
             </div>
             <div class="footer-pera">
-            <p>© 2026 TechWave Podcast. All rights reserved.</p></div>
+                <p>© 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 
